--- a/src/angular/cooldrive/src/index.html
+++ b/src/angular/cooldrive/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>kábszer</app-root>
+  <app-root>Loading...</app-root>
+  <div ng-app="login"></div>
 </body>
 </html>
